--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,69 @@
 .App {
-  text-align: center;
+  width: 100vw;
+  height: 100vh;
+  background-color: #d3d3d3;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.column {
+width: 30%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.droppable-col {
+  width: 100%;
+  background-color: gray;
+  padding: 10px 10px 0px 10px;
+  border-radius: 7px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.item {
+  margin-bottom: 10px;
   color: white;
+  border: 1px solid white;
+  padding: 20px;
+  border-radius: 7px;
+  background-color: gray;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.item.dragging {
+  background-color: cadetblue;
+}
+.dragContextWrapper {
+  display: flex;
+  justify-content: space-evenly;
+}
+.creatTaskWrapper {
+  display: flex;
+  justify-content: center;
+  padding: 30px;
+}
+.newTask {
+  font-size: 14px;
+  font-weight: bold;
+  color: white;
+  background-color: darkgray;
+  padding: 12px;
+  border: none;
+  border-radius: 6px;
+}
+.loader {
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #3498db;
+  width: 120px;
+  height: 120px;
+  -webkit-animation: spin 2s linear infinite; /* Safari */
+  animation: spin 2s linear infinite;
 }
 
-.App-link {
-  color: #61dafb;
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
